# deepseek-tool-use-experiment

./: .env  .env.template  .gitignore  Procfile  README.md  hypercorn_config.py  main.py  pyproject.toml  render.yaml  run_cron.py
adventai/: index.html  script.js  styles.css
adventai/components/: components.js  gift-list.js  preview-tiles.js
api/chat/: __init__.py  post.py
api/config/: __init__.py
api/cron/: __init__.py
api/gifts/: __init__.py
helpers/: __init__.py  experimental.py
llms/: __init__.py
prompts/: _template.toml  career-coach.toml  chef-boss.toml  daily-facts.toml  deal-finder.toml  deepseek.toml  job-digest.toml  mealplanner.toml  news-digest.toml  random-pet-fact.toml  stonks-simulator.toml  wwed.toml  x-digest.toml
static/: domo.js  index.html
static/adventai/: index.html  script.js  styles.css
static/components/: action-box.js  chat-history-container.js  components.js  generic-icon.js  main-app.js  preferences-form.js  resizable-textarea.js  success-message.js  toolhouse-icon.js  utensils-crossed-icon.js
static/components/icons/: biceps-flexed-icon.js  bomb-icon.js  chef-icon.js  dollar-sign-icon.js  house-icon.js  index.js  newspaper-icon.js  random-pet-icon.js  stonks-icon.js  twitter-icon.js  utensils-crossed-icon.js
static/css/: style.css
static/css/components/: resizable-textarea.css
static/helpers/: stream.js
